fixed text overlapping

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -15,9 +15,10 @@
   h2, h3, h4, {
     padding: 0 2rem;
     margin: 0.4rem;
+    text-align: center;
   }
-  p{
-    width: 460px;
+  p {
+    max-width: 460px;
     padding: 0.1rem 1rem;
     white-space: normal;
     font-style: italic;
