--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -63,6 +63,9 @@ h3 {
 h4 {
   font-size: 12px;
 }
+p {
+  font-size: 13px;
+}
 a{
   color: $yellow;
   text-decoration: none;
